website update, fixed html/css errors and now works on IE

--- a/website/css/CqStyle.css
+++ b/website/css/CqStyle.css
@@ -8,7 +8,6 @@ html{
 }
 body,html{
 	height: 100%;
-	overflow: auto;
 }
 #page {
 	background:#FFFFFF;
@@ -18,12 +17,13 @@ body,html{
 	width: 1300px ;
 	margin-left: auto ;
 	margin-right: auto ;
+	overflow: auto;
 	/*-moz-box-shadow: 0px 0px 45px 10px #000;
 	-webkit-box-shadow: 0px 0px 45px 10px #000;
 	box-shadow: 0px 0px 45px 10px #000;*/
 }
 li{
-	margin:5px;
+	list-style-position:inside;
 }
 #contentArea{
 	width:900px;
@@ -73,5 +73,7 @@ span{
 #rightContainer{
 	font-family: Cust2;
 	font-size:20px;
-	margin:10px;
+	padding:10px;
+	//margin:10px;
+	float:none;
 }
